<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.homepage.MainActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="binViewModel"
            type="com.example.shiftmobile.presentation.homepage.BINViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvBIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_title"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBIN"
            android:text="@={binViewModel.bin}" />

        <Button
            android:id="@+id/btnFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etQuery"
            android:layout_marginBottom="20dp"
            android:onClick="@{()->binViewModel.startJobGetInfo()}"
            android:text="@string/find_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnFind"
            android:orientation="vertical"
            android:visibility="@{binViewModel.isCardInfoLoading() ? View.GONE : View.VISIBLE}">

            <LinearLayout style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scheme_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.scheme ?? `?`}"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.type ?? `?`}"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%s, %s", binViewModel.cardInfoLive.bank.name ?? `?`, binViewModel.cardInfoLive.bank.city ?? `?`)}'
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->binViewModel.linkClicked()}"
                    android:text="@{binViewModel.cardInfoLive.bank.url ?? `?`}"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->binViewModel.phoneClicked()}"
                    android:text="@{binViewModel.cardInfoLive.bank.phone ?? `?`}"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.brand ?? `?`}"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepaid_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.prepaid ? @string/yes : @string/no}"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lenght_title"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(binViewModel.cardInfoLive.number.length)}"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/luhn_title"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{binViewModel.cardInfoLive.number.luhn ? @string/yes : @string/no}"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%s, %s", binViewModel.cardInfoLive.country.emoji ?? `?`, binViewModel.cardInfoLive.country.name ?? `?`)}'
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->binViewModel.coordsClicked()}"
                    android:text="@{`(` + `latitude` + `: ` + Integer.toString(binViewModel.cardInfoLive.country.latitude)  + `, ` + `longitude` + `: ` + Integer.toString(binViewModel.cardInfoLive.country.longitude) + `)`}" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbCardInfo"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:visibility="@{binViewModel.isCardInfoLoading() ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>

</layout>

