<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.homepage.MainActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="binViewModel"
            type="com.example.shiftmobile.presentation.homepage.BINViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:textSize="20dp"
            android:id="@+id/tvBIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_title" />

        <EditText
            android:layout_below="@id/tvBIN"
            android:id="@+id/etQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={binViewModel.bin}" />

        <Button
            android:layout_marginBottom="20dp"
            android:id="@+id/btnFind"
            android:layout_below="@id/etQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->binViewModel.startJob()}"
            android:text="@string/find_title" />

        <LinearLayout
            android:visibility="@{binViewModel.isCardInfoLoading() ? View.GONE : View.VISIBLE}"
            android:layout_below="@id/btnFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scheme_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.scheme ?? `?`}"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_title" />

                <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.type ?? `?`}" />
            </LinearLayout>

            <LinearLayout
                style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_title" />

                <TextView
                    android:text='@{String.format("%s, %s", binViewModel.cardInfoLive.bank.name ?? `?`, binViewModel.cardInfoLive.bank.city ?? `?`)}'
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:onClick="@{()->binViewModel.linkClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.bank.url ?? `?`}" />

                <TextView
                    android:textSize="20dp"
                    android:onClick="@{()->binViewModel.phoneClicked()}"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.bank.phone ?? `?`}" />
            </LinearLayout>

            <LinearLayout
                style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_title" />

                <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.brand ?? `?`}" />
            </LinearLayout>

            <LinearLayout
                style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepaid_title" />

                <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{binViewModel.cardInfoLive.prepaid ? @string/yes : @string/no}" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number_title" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lenght_title" />

                    <TextView
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(binViewModel.cardInfoLive.number.length)}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/luhn_title" />

                    <TextView
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{binViewModel.cardInfoLive.number.luhn ? @string/yes : @string/no}" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/VerElemStyle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_title" />

                <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%s, %s", binViewModel.cardInfoLive.country.emoji ?? `?`, binViewModel.cardInfoLive.country.name ?? `?`)}'
                    />

                <TextView
                    android:onClick="@{()->binViewModel.coordsClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`(` + `latitude` + `: ` + Integer.toString(binViewModel.cardInfoLive.country.latitude)  + `, ` + `longitude` + `: ` + Integer.toString(binViewModel.cardInfoLive.country.longitude) + `)`}" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbCardInfo"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:visibility="@{binViewModel.isCardInfoLoading() ? View.VISIBLE : View.GONE}" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            app:onNavigationItemSelected="@{(menuItem)->binViewModel.bottomNavItemSelected(menuItem)}"
            app:elevation="0dp"
            android:background="@drawable/style_bot_nav"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu" />
    </RelativeLayout>
</layout>
